@startuml

title AircraftWar Observer (Bomb/Freeze)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

interface PropSubject {
  + addObserver(observer : PropObserver) : void
  + removeObserver(observer : PropObserver) : void
  + clearObservers() : void
}

interface PropObserver {
  + onBombEffect() : int
  + onFreezeEffect() : void
}

abstract class AbstractProp {
  - observers : List<PropObserver>
  + effect() : void
  # notifyBombObservers() : int
  # notifyFreezeObservers() : void
}

class BombSupply {
  + effect() : void
}

class FreezeSupply {
  + effect() : void
}

abstract class AbstractEnemy {
  + onBombEffect() : int
  + onFreezeEffect() : void
}

class EnemyBullet {
  + onBombEffect() : int
  + onFreezeEffect() : void
}

class Game {
  - enemyAircrafts : List<AbstractEnemy>
  - enemyBullets : List<EnemyBullet>
  - props : List<AbstractProp>
  - crashCheckAction() : void
}

PropSubject <|.. AbstractProp
AbstractProp <|-- BombSupply
AbstractProp <|-- FreezeSupply

PropObserver <|.. AbstractEnemy
PropObserver <|.. EnemyBullet

Game ..> AbstractProp : register observers
Game ..> AbstractEnemy : observes
Game ..> EnemyBullet : observes

note right of AbstractProp
  BombSupply/FreezeSupply
  notify observers on effect()
end note

@enduml
